@startuml
package Global.Architecture {

    package Sommet {
        class Sommets {
            - List<Arc> arcsSortants
            - List<Arc> arcsEntrant
            - Set<String> rues
            - String nom

            + Sommets(List<Arc>, List<Arc>, Set<String>, String)
            + List<Arc> getArcsSortants()
            + List<Arc> getArcsEntrant()
            + Set<String> getRues()
            + String getNom()
            + void addArcSortant(Arc)
            + void addArcEntrant(Arc)
        }

        class PointDeCollecte {
            - String rue
            - Arc localisation
            - String nom
            - int capacite
            - ArrayList<Poubelle> poubelles

            + PointDeCollecte(String rue, String nom, int capacite)
            + PointDeCollecte(Arc localisation, String nom, int capacite)
            + String getRue()
            + String getNom()
            + int getCapacite()
            + int getNombre_poubelles()
            + ArrayList<Poubelle> getPoubelles()
            + Arc getLocalisation()
        }

        class PointDeDepot {
            - String nom
            - int capacite
            - ArrayList<String> poubelles

            + PointDeDepot(String nom)
            + void chargerCamion(Camion, int)
            + void dechargerCamion(Camion)
            + String getNom()
            + int getCapacite()
            + ArrayList<String> getPoubelles()
        }
    }

    class Rue {
        - String nom
        - LinkedList<Arc> ensembleRue
        - int nbHabitations
        - float longueur

        + Rue(String, LinkedList<Arc>, int, float)
        + String getNom()
        + LinkedList<Arc> getEnsemble_rue()
        + int getNbHabitations()
        + float getLongueur()
        + void addArc(Arc)
    }

    class Arc {
        - String nomRue
        - int nbMaisons
        - float longueur
        - int sens
        - Sommets sommets1
        - Sommets sommets2

        + Arc(String, int, float, int, Sommets, Sommets)
        + String getNomRue()
        + int getNbMaisons()
        + float getLongueur()
        + int getSens()
        + Sommets getSommet1()
        + Sommets getSommet2()
        + Sommets chgtSommet(Sommets)
    }

    class Quartier {
        - String nom
        - LinkedList<Rue> rues
        - boolean[][][] occupation
        - LinkedList<Quartier> voisins
        - int couleur

        + Quartier(String)
        + void addVoisin(Quartier)
        + void addRue(Rue)
        + boolean estLibre(int,int,int)
        + void occuper(int,int,int)
        + static void colorierQuartiers(LinkedList<Quartier>)
        + LinkedList<Rue> getRues()
        + LinkedList<Quartier> getVoisins()
        + String getNom()
        + int getCouleur()
        + void setCouleur(int)
    }

    class Fichier {
        - String nomFichier
        - Map<String, Rue> listeRues
        - Map<String, PointDeCollecte> listePointsCollectes
        - Map<String, PointDeDepot> listePointsDepots
        - Map<String, Sommets> listeSommets
        - Map<String, Arc> listeArcs

        + Fichier(String) throws IOException
        + void afficherDonnees()
        + Map<String,Rue> getListeRues()
        + Map<String,Sommets> getListeSommets()
        + Map<String,Arc> getListeArcs()
        + Map<String,PointDeCollecte> getListePointsCollectes()
        + Map<String,PointDeDepot> getListePointsDepots()
    }

    Arc --> Sommets : "relie"
    Rue --> Arc : "contient"
    Fichier ..> Sommets : "crée"
    Fichier ..> Rue : "crée"
    Fichier ..> Arc : "crée"
    Fichier ..> PointDeCollecte : "crée"
    Fichier ..> PointDeDepot : "crée"

    Quartier --> Rue : "contient"
    Quartier --> Quartier : "voisin"
}
@enduml
